Opened 13 years ago
Closed 13 years ago
#8364 closed bug (fixed)
MediaPlayer looping regardless of settings
Reported by: | jstressman | Owned by: | stpere |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/MediaPlayer | Version: | R1/Development |
Keywords: | loop looping | Cc: | mdisreali@… |
Blocked By: | Blocking: | ||
Platform: | All |
Description
In hrev43809 Mediaplayer is looping video and audio regardless of whether or not I have the loop setting enabled or disabled.
I've listened to an mp3 4 times in a row, and then even tried enabling loop... playing it, letting it loop, then disabling it, and letting it loop again.
Change History (5)
comment:1 by , 13 years ago
comment:2 by , 13 years ago
Cc: | added |
---|
I just did some bisecting and it looks like hrev43642 caused this issue.
comment:3 by , 13 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:5 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
fixed in hrev44115. Thanks!
Note:
See TracTickets
for help on using tickets.
IIRC, this issue started sometime after hrev43550. Will check soon.