MediaPlayer: Looping regardless of setting

* Fixed a regression I introduced in hrev43642. Ticket #8364.
* Small coding style fix